--- a/form1.html
+++ b/form1.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <!--필수 : input(text, radio, checkbox, date), select, textarea
+선택 : fieldset, legend, optgroup, input(color), datalist-->
+
+
+<h1>checkout form</h1>
+
+<form>
+    first name: <input type="text">
+</form>
 </body>
+
 </html>
